// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupsError/> render a group error 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "padding": 40,
    }
  }
>
  <Text
    center={true}
    selectable={true}
    style={
      Array [
        Object {
          "color": "#cbd2d6",
          "fontFamily": "NunitoSans-Regular",
          "fontSize": 18,
          "lineHeight": 24,
          "textAlign": "center",
        },
        Array [
          Object {
            "color": "#cbd2d6",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 20,
          },
          Object {
            "marginBottom": 20,
          },
        ],
      ]
    }
  >
    Something went wrong...
  </Text>
</View>
`;

exports[`<GroupsError/> render a group error with a Try Again CTA 1`] = `
<View
  style={
    Object {
      "justifyContent": "center",
      "padding": 40,
    }
  }
>
  <Text
    center={true}
    selectable={true}
    style={
      Array [
        Object {
          "color": "#cbd2d6",
          "fontFamily": "NunitoSans-Regular",
          "fontSize": 18,
          "lineHeight": 24,
          "textAlign": "center",
        },
        Array [
          Object {
            "color": "#cbd2d6",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 20,
          },
          Object {
            "marginBottom": 20,
          },
        ],
      ]
    }
  >
    Something went wrong...
  </Text>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#313d48",
          "borderRadius": 6,
          "justifyContent": "center",
          "minHeight": 60,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        selectable={true}
        style={
          Array [
            Object {
              "color": "#cbd2d6",
              "fontFamily": "NunitoSans-Regular",
              "fontSize": 18,
              "lineHeight": 24,
              "textAlign": "auto",
            },
            Array [
              Object {
                "color": "#fff",
                "textAlign": "center",
              },
              Object {},
            ],
          ]
        }
      >
        Try Again
      </Text>
    </View>
  </View>
</View>
`;
